# TinyLogger

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-ci.yaml  release.yaml
demo/: demo.ipynb  experiment_log.jsonl  gridsearch.ipynb  parallel_run.jsonl.14620  parallel_run.jsonl.15996  parallel_run.jsonl.2016  parallel_run.jsonl.23292  parallel_run.jsonl.4532  parallel_run.jsonl.4772
src/littlelogger/: __init__.py  decorator.py  util.py
src/tinylogger/: __init__.py  decorator.py  exceptions.py
tests/: test_decorator.py  test_performance.py
